# aiops

./: .env  .gitignore  LICENSE  README-API-SYNC.md  README.md  changelog.md  comprehensive-project-improvement-plan.md  comprehensive-security-analysis.md  deployment-operations-checklist.md  deployment-operations-comprehensive-analysis.md  docker-compose.override.yml  docker-compose.yml  input_output.md  package-lock.json  project-improvement-checklist.md  security-audit-report.md  user-manual-helm.md
elk/: .env  (+6 more)
server_thermal_control/: .env.example  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.builder  Dockerfile.runtime  README.md  build_output2.txt  docker-compose-full.yml  docker-compose.yml  network_final_check.txt  network_fix_check.txt
server_thermal_control/config/: app.toml
server_thermal_control/docs/: API.md
server_thermal_control/grafana/dashboards/: dashboard.yml
server_thermal_control/grafana/datasources/: datasource.yml
server_thermal_control/nginx/: nginx.conf
server_thermal_control/prometheus/: prometheus.yml
server_thermal_control/scripts/: build.ps1  deploy.ps1  init.sql
server_thermal_control/src/: main.rs
server_thermal_control/src/config/: mod.rs
server_thermal_control/src/controllers/: alert_controller.rs  analytics_controller.rs  config_controller.rs  control_controller.rs  fan_controller.rs  health_controller.rs  mod.rs  monitoring_controller.rs  sensor_controller.rs  thermal_controller.rs
server_thermal_control/src/handlers/: alert.rs  fan.rs  mod.rs  temperature.rs
server_thermal_control/src/models/: alert.rs  analytics.rs  api.rs  config.rs  control.rs  error.rs  fan.rs  mod.rs  monitoring.rs  sensor.rs  thermal.rs
server_thermal_control/src/services/: alert_service.rs  analytics_service.rs  config_service.rs  control_service.rs  fan_service.rs  ipmi_service.rs  mod.rs  monitoring_service.rs  sensor_service.rs  thermal_service.rs
server_thermal_control/src/utils/: config.rs  crypto.rs  ipmi.rs  logger.rs  math.rs  mod.rs  network.rs  time.rs  validation.rs
server_thermal_control/web-ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
server_thermal_control/web-ui/src/: App.vue  main.js
test-scenarios/test-web-service/: Cargo.toml  changelog.md  input_output.md  openapi.json  requirements-analysis.md
test-scenarios/test-web-service/examples/: README.md  import_sample_tests.py  sample_test_cases.json  sample_test_suite_config.json  test_environments.json  test_scenario_generator.py
test-scenarios/test-web-service/frontend/: cypress.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+401 files in other folders)
